deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: rails-app
  template:
    metadata:
      labels:
        app: rails-app
    spec:
      containers:
      - name: rails-app
        image: yashpimple22/railsapp:1.0
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: rails-app-service
spec:
  selector:
    app: rails-app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer  

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dynamodb
spec:
  serviceName: dynamodb
  replicas: 1  
  selector:
    matchLabels:
      app: dynamodb
  template:
    metadata:
      labels:
        app: dynamodb
    spec:
      containers:
      - name: dynamodb
        image: amazon/dynamodb-local
        ports:
        - containerPort: 8000
